tests/ui/generics/generic-function-item-where-type.stderr
error[E0747]: constant provided when a type was expected
  --> $DIR/generic-function-item-where-type.rs:4:11
   |
LL |     foo::<main>()
   |           ^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0747`.
